fix autowireds